Author on disabilityaids page

--- a/disabilityaids.html
+++ b/disabilityaids.html
@@ -50,7 +50,16 @@
             <p>Also mentioned on earlier, dictation software is used to input text into computers when you are unable to use a keyboard.
                 Couple with screen readers they are very useful tool for blind people as they enable typing on mobile phones or other touchscreen devices which lack a physical keyboard.
                 They are however also very useful for people with mobility or fine motor control issues, who would be unable to or struggle to use a keyboard. Word dictation software today is very reliable, with the <a href="https://www.nytimes.com/wirecutter/reviews/best-dictation-software/">New York Times saying that the dictation feature in Microsoft Word has 99% accuracy as of August 28th, 2025.</a></p>
-        </div>
+        
+         <div class="card mb-2">
+         <div class="card-body">
+          <h3>Authored by:</h3>
+          <img src="https://avatars.githubusercontent.com/u/123660571?v=4" height="64px"><p><b>Brian Zasuwik</b></p>
+      </div>
+</div>
+            </div>
+    
+
         </main>
 
         <!-- Add content before the JS link -->
