--- a/Encryption.html
+++ b/Encryption.html
@@ -32,6 +32,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="Encryption.html">Encryption</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="RecordKeeping.html">Record Keeping</a>
+                        </li>
                         </li>
                     </ul>
                     </div>
