--- a/RecordKeeping.html
+++ b/RecordKeeping.html
@@ -89,4 +89,8 @@ Technology reduces the risk of human error in record keeping. Automated systems,
 
   <!-- Add content before the JS link -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    document.getElementbyid('option1').click(function(){
+
+    })
+
 </body>
