Authorship on Record Keeping

--- a/RecordKeeping.html
+++ b/RecordKeeping.html
@@ -77,6 +77,8 @@ Technology reduces the risk of human error in record keeping. Automated systems,
     <div class="card-body">
         <h3>Authored by:</h3>
         <p><img src="https://avatars.githubusercontent.com/u/237948113" class="rounded" height="64px"><b> Roshaan Hussain</b></p>
+        <p>Find me on GitHub:</p>
+        <p><a href="https://github.com/sqcp59" target="_blank" rel="noopener noreferrer" class="btn btn-primary">View GitHub profile</a></p>
     </div>
 </div>
 
