Updated authorship on encryption.html

--- a/Encryption.html
+++ b/Encryption.html
@@ -71,7 +71,9 @@
         <div class="card mb-2">
             <div class="card-body">
             <h3>Authored by:</h3>
-            <p><img src="https://avatars.githubusercontent.com/u/200087858" class="rounded" height="64px"><b> Lucas</b></p>
+            <p><img src="https://avatars.githubusercontent.com/u/200087858" class="rounded" height="64px"><b> Lucas Ng</b></p>
+            <p>Find me on LinkedIn:</p>
+            <p><a href="https://www.linkedin.com/in/lucas-ng-b90241384/"target="_blank" rel="noopener noreferrer" class="btn btn-primary">View LinkedIn profile</a></p>
             <p>Find me on GitHub:</p>
             <p><a href="https://github.com/Vrataski-8" target="_blank" rel="noopener noreferrer" class="btn btn-primary">View GitHub profile</a></p>
             </div>
