--- a/computer_vision.html
+++ b/computer_vision.html
@@ -190,6 +190,8 @@
             <h2 class="mb-3 mt-5">Connect</h2>
             <div class="card mb-4">
                 <div class="card-body">
+                    <h3>Authored by:</h3>
+                    <p><img src="https://avatars.githubusercontent.com/u/223702708?v=4&size=64" class="rounded" height="64px"><b> Nopparut Rukkha-anankul</b></p>
                     <h3 class="h5">LinkedIn</h3>
                     <p>Connect with me on LinkedIn:</p>
                     <p><a href="https://www.linkedin.com/in/nopparut-rukkha-anankul-798a22373" target="_blank" rel="noopener noreferrer" class="btn btn-primary">View LinkedIn profile</a></p>
