--- a/nature.html
+++ b/nature.html
@@ -9,7 +9,7 @@
         <style>
 
             * {
-                color:white
+                color:black
             }
 
             .textNexttoImage {
