added comments for issues

--- a/ai_industry.html
+++ b/ai_industry.html
@@ -156,7 +156,7 @@
     <div class="card mb-2">
     <div class="card-body">
         <h3>Authored by:</h3>
-        <p><img src="https://avatars.githubusercontent.com/u/94052312" class="rounded" height="64px"><b> Jongyul Oh</b></p>
+        <p><img src="https://avatars.githubusercontent.com/u/94052312" class="rounded" height="64px"><b> Jongyul Oh</b></p> <!--the px in height="64px" is invalid and no alt text-->
         <p>Find me on LinkedIn:</p>
         <p><a href="https://www.linkedin.com/in/jongyul-oh-453460236/" target="_blank" rel="noopener noreferrer" class="btn btn-primary">View LinkedIn profile</a></p>
         <p>Find me on GitHub:</p>
