--- a/RecordKeeping.html
+++ b/RecordKeeping.html
@@ -7,7 +7,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
-</div>
+</div> <!-- no div opened yet-->
 <main>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
@@ -76,13 +76,13 @@ Technology reduces the risk of human error in record keeping. Automated systems,
 <div class="card mb-2">
     <div class="card-body">
         <h3>Authored by:</h3>
-        <p><img src="https://avatars.githubusercontent.com/u/237948113" class="rounded" height="64px"><b> Roshaan Hussain</b></p>
+        <p><img src="https://avatars.githubusercontent.com/u/237948113" class="rounded" height="64px"><b> Roshaan Hussain</b></p> <!-- px is invalid and no alt text-->
         <p>Find me on GitHub:</p>
         <p><a href="https://github.com/sqcp59" target="_blank" rel="noopener noreferrer" class="btn btn-primary">View GitHub profile</a></p>
     </div>
 </div>
   </div>
-  </div>
+  </div> <!-- extra close tag-->
   </main>
 
   <!-- Add content before the JS link -->
