--- a/disabilityaids.html
+++ b/disabilityaids.html
@@ -54,7 +54,7 @@
                 however instead of using speech synthesis, it uses a board with pins that can move up and down to form braille characters.</p>
             <p><a href="https://commons.wikimedia.org/wiki/File:Plage-braille.jpg#/media/File:Plage-braille.jpg"><img src="https://upload.wikimedia.org/wikipedia/commons/4/4a/Plage-braille.jpg" alt="File:Plage-braille.jpg" height="428" width="640"></a><br>By <a href="//commons.wikimedia.org/wiki/User:Sebastien.delorme" title="User:Sebastien.delorme">Sebastien.delorme</a> - <span class="int-own-work" lang="en">Own work</span>, <a href="https://creativecommons.org/licenses/by-sa/3.0" title="Creative Commons Attribution-Share Alike 3.0">CC BY-SA 3.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=9474490">Link</a></p>
             <h2>Dictation Software</h2>
-            <p><img src="https://images.pexels.com/photos/5592260/pexels-photo-5592260.jpeg" alt="A man speaking into his phone" height="320" width=auto></p>
+            <p><img src="https://images.pexels.com/photos/5592260/pexels-photo-5592260.jpeg" alt="A man speaking into his phone" height="320" width=auto></p> <!-- width = auto is invalid syntax-->
             <p>Also mentioned on earlier, dictation software is used to input text into computers when you are unable to use a keyboard.
                 Couple with screen readers they are very useful tool for blind people as they enable typing on mobile phones or other touchscreen devices which lack a physical keyboard.
                 They are however also very useful for people with mobility or fine motor control issues, who would be unable to or struggle to use a keyboard. Word dictation software today is very reliable, with the <a href="https://www.nytimes.com/wirecutter/reviews/best-dictation-software/">New York Times saying that the dictation feature in Microsoft Word has 99% accuracy as of August 28th, 2025.</a></p>
@@ -62,10 +62,10 @@
          <div class="card mb-2">
          <div class="card-body">
           <h3>Authored by:</h3>
-          <p><img src="https://avatars.githubusercontent.com/u/123660571?v=4" height="64px"><b>Brian Zasuwik</b></p>
-          <p><a href="https://uk.linkedin.com/in/brianzasuwik">Connect on LinkedIn </p>
+          <p><img src="https://avatars.githubusercontent.com/u/123660571?v=4" height="64px"><b>Brian Zasuwik</b></p> <!--the px in height="64px" is invalid and no alt for immage-->
+          <p><a href="https://uk.linkedin.com/in/brianzasuwik">Connect on LinkedIn </p>. <!--unclosed tags-->
       </div>
-</div>
+</div> <!-- end tag no open tag-->
             </div>
     
 
