--- a/nature.html
+++ b/nature.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name ="viewport" content="width=device-width", inital-scale="1">
+        <meta name ="viewport" content="width=device-width", inital-scale="1"> <!--spelling mistake in initial-scale-->
         <title> Environmental Impacts </title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
         <!-- Code above links a CSS stylesheet using bootstrap-->
@@ -167,7 +167,7 @@
     <div class="card mb-2">
     <div class="card-body">
         <h3>Authored by:</h3>
-        <p><img src="https://avatars.githubusercontent.com/u/237950487" class="rounded" height="64px"><b> Rithvik Polpakkara Mana</b></p>
+        <p><img src="https://avatars.githubusercontent.com/u/237950487" class="rounded" height="64px"><b> Rithvik Polpakkara Mana</b></p> <!-- px invalid and no alt-->
         <p>Find me on LinkedIn:</p>
         <p><a href="https://www.linkedin.com/in/rithvik-polpakkara-mana-8371a4320/" target="_blank" rel="noopener noreferrer" class="btn btn-primary">View LinkedIn profile</a></p>
         <p>Find me on GitHub:</p>
@@ -175,5 +175,5 @@
     </div>
 </div>
 </body>
-</div>
+</div> <!-- closing after body closed-->
 </html> 
